# rotom-pokedex-bot-2

./: .coveragerc  Caddyfile  Dockerfile  Pipfile  README.md  app.py  csv  entries.py  log.py  lookup.py  pokedex.ipynb  pyproject.toml  release.sh  requirements.txt  rotom-pokedex-bot.service  server.py  summary.py  type_efficacy.py
.circleci/: config.yml
test/: conftest.py  test_entries.py  test_server.py
test/fixtures/: entries.py  pokemon.py
